--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite preview"
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.50.1",
@@ -30,6 +30,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "serve": "^14.2.3",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
